clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ieee__copysign2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/ieee__copysign2.c" (c, x86_64-unknown-linux-gnu)
global Yf : float[8] = ConstArray { ty: Array { element_type: Single, size: 8 }, elts: Array([CirFloat { ty: Single, value: "2.000000e+00" }, CirFloat { ty: Single, value: "-2.000000e+00" }, CirFloat { ty: Single, value: "-2.000000e+00" }, CirFloat { ty: Single, value: "-2.000000e+00" }, CirFloat { ty: Single, value: "-2.000000e+00" }, CirFloat { ty: Single, value: "2.000000e+00" }, CirFloat { ty: Single, value: "-0.000000e+00" }, CirFloat { ty: Single, value: "0x7F800000" }]), trailing_zeros_num: 0 } [internal, default, align 16, dso_local]
global Zf : float[8] = ConstArray { ty: Array { element_type: Single, size: 8 }, elts: Array([CirFloat { ty: Single, value: "1.000000e+00" }, CirFloat { ty: Single, value: "-1.000000e+00" }, CirFloat { ty: Single, value: "-1.000000e+00" }, CirFloat { ty: Single, value: "-0.000000e+00" }, CirFloat { ty: Single, value: "-0.000000e+00" }, CirFloat { ty: Single, value: "0.000000e+00" }, CirFloat { ty: Single, value: "0xFF800000" }, CirFloat { ty: Single, value: "0x7FC00000" }]), trailing_zeros_num: 0 } [internal, default, align 16, dso_local, constant]
global Y : double[8] = ConstArray { ty: Array { element_type: Double, size: 8 }, elts: Array([CirFloat { ty: Double, value: "2.000000e+00" }, CirFloat { ty: Double, value: "-2.000000e+00" }, CirFloat { ty: Double, value: "-2.000000e+00" }, CirFloat { ty: Double, value: "-2.000000e+00" }, CirFloat { ty: Double, value: "-2.000000e+00" }, CirFloat { ty: Double, value: "2.000000e+00" }, CirFloat { ty: Double, value: "-0.000000e+00" }, CirFloat { ty: Double, value: "0x7FF0000000000000" }]), trailing_zeros_num: 0 } [internal, default, align 16, dso_local]
global Z : double[8] = ConstArray { ty: Array { element_type: Double, size: 8 }, elts: Array([CirFloat { ty: Double, value: "1.000000e+00" }, CirFloat { ty: Double, value: "-1.000000e+00" }, CirFloat { ty: Double, value: "-1.000000e+00" }, CirFloat { ty: Double, value: "-0.000000e+00" }, CirFloat { ty: Double, value: "-0.000000e+00" }, CirFloat { ty: Double, value: "0.000000e+00" }, CirFloat { ty: Double, value: "0xFFF0000000000000" }, CirFloat { ty: Double, value: "0x7FF8000000000000" }]), trailing_zeros_num: 0 } [internal, default, align 16, dso_local, constant]
global Yl : long_double<f80>[8] = ConstArray { ty: Array { element_type: LongDouble { underlying: Fp80 }, size: 8 }, elts: Array([CirFloat { ty: LongDouble { underlying: Fp80 }, value: "2.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-2.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-2.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-2.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-2.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "2.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-0.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "0x7FFF8000000000000000" }]), trailing_zeros_num: 0 } [internal, default, align 16, dso_local]
global Zl : long_double<f80>[8] = ConstArray { ty: Array { element_type: LongDouble { underlying: Fp80 }, size: 8 }, elts: Array([CirFloat { ty: LongDouble { underlying: Fp80 }, value: "1.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-1.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-1.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-0.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "-0.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "0.000000e+00" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "0xFFFF8000000000000000" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "0x7FFFC000000000000000" }]), trailing_zeros_num: 0 } [internal, default, align 16, dso_local, constant]

fn memcmp(%arg0: void*, %arg1: void*, %arg2: u64i) -> s32i [external, c, pure, nothrow];
fn abort() -> void [external, c, nothrow];
fn testf() -> void [external, c, no_inline, dso_local, nothrow] {
        %184 = alloca float[8], "r", align 16
        %185 = alloca s32i, "i", align 4
        %186 = const 1.000000e+00 : double
        %187 = cast(floating) %186 : float
        %188 = const 0 : s64i
        %189 = get_global @Yf : float[8]*
        get_element
        %191 = load %190 : float, align 16
        copysign
        %193 = const 0 : s64i
        get_element
        store %192, %194, align 16
        %195 = const 1.000000e+00 : double
        %196 = cast(floating) %195 : float
        %197 = const 1 : s64i
        %198 = get_global @Yf : float[8]*
        get_element
        %200 = load %199 : float, align 4
        copysign
        %202 = const 1 : s64i
        get_element
        store %201, %203, align 4
        %204 = const -1.000000e+00 : double
        %205 = cast(floating) %204 : float
        %206 = const 2 : s64i
        %207 = get_global @Yf : float[8]*
        get_element
        %209 = load %208 : float, align 8
        copysign
        %211 = const 2 : s64i
        get_element
        store %210, %212, align 8
        %213 = const 0.000000e+00 : double
        %214 = cast(floating) %213 : float
        %215 = const 3 : s64i
        %216 = get_global @Yf : float[8]*
        get_element
        %218 = load %217 : float, align 4
        copysign
        %220 = const 3 : s64i
        get_element
        store %219, %221, align 4
        %222 = const -0.000000e+00 : double
        %223 = cast(floating) %222 : float
        %224 = const 4 : s64i
        %225 = get_global @Yf : float[8]*
        get_element
        %227 = load %226 : float, align 16
        copysign
        %229 = const 4 : s64i
        get_element
        store %228, %230, align 16
        %231 = const -0.000000e+00 : double
        %232 = cast(floating) %231 : float
        %233 = const 5 : s64i
        %234 = get_global @Yf : float[8]*
        get_element
        %236 = load %235 : float, align 4
        copysign
        %238 = const 5 : s64i
        get_element
        store %237, %239, align 4
        %240 = const 0x7F800000 : float
        %241 = const 6 : s64i
        %242 = get_global @Yf : float[8]*
        get_element
        %244 = load %243 : float, align 8
        copysign
        %246 = const 6 : s64i
        get_element
        store %245, %247, align 8
        %248 = const 0xFFC00000 : float
        %249 = const 7 : s64i
        %250 = get_global @Yf : float[8]*
        get_element
        %252 = load %251 : float, align 4
        copysign
        %254 = const 7 : s64i
        get_element
        store %253, %255, align 4
        scope {
                %256 = const 0 : s32i
                store %256, %185, align 4
                for cond {
                        %274 = load %185 : s32i, align 4
                        %275 = const 8 : s32i
                        cmp
                        condition %276
                } step {
                        %257 = load %185 : s32i, align 4
                        inc
                        store %258, %185, align 4
                        yield
                } body {
                        scope {
                                %259 = get_global @memcmp : (void*, void*, u64i) -> s32i*
                                %260 = cast(array_to_ptrdecay) %184 : float*
                                %261 = load %185 : s32i, align 4
                                ptr_stride
                                %263 = cast(bitcast) %262 : void*
                                %264 = get_global @Zf : float[8]*
                                %265 = cast(array_to_ptrdecay) %264 : float*
                                %266 = load %185 : s32i, align 4
                                ptr_stride
                                %268 = cast(bitcast) %267 : void*
                                %269 = const 4 : u64i
                                %270 = call @memcmp(%263, %268, %269) : s32i [pure]
                                %271 = const 0 : s32i
                                cmp
                                if %272 {
                                        %273 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        return
}
fn test() -> void [external, c, no_inline, dso_local, nothrow] {
        %97 = alloca double[8], "r", align 16
        %98 = alloca s32i, "i", align 4
        %99 = const 1.000000e+00 : double
        %100 = const 0 : s64i
        %101 = get_global @Y : double[8]*
        get_element
        %103 = load %102 : double, align 16
        copysign
        %105 = const 0 : s64i
        get_element
        store %104, %106, align 16
        %107 = const 1.000000e+00 : double
        %108 = const 1 : s64i
        %109 = get_global @Y : double[8]*
        get_element
        %111 = load %110 : double, align 8
        copysign
        %113 = const 1 : s64i
        get_element
        store %112, %114, align 8
        %115 = const -1.000000e+00 : double
        %116 = const 2 : s64i
        %117 = get_global @Y : double[8]*
        get_element
        %119 = load %118 : double, align 16
        copysign
        %121 = const 2 : s64i
        get_element
        store %120, %122, align 16
        %123 = const 0.000000e+00 : double
        %124 = const 3 : s64i
        %125 = get_global @Y : double[8]*
        get_element
        %127 = load %126 : double, align 8
        copysign
        %129 = const 3 : s64i
        get_element
        store %128, %130, align 8
        %131 = const -0.000000e+00 : double
        %132 = const 4 : s64i
        %133 = get_global @Y : double[8]*
        get_element
        %135 = load %134 : double, align 16
        copysign
        %137 = const 4 : s64i
        get_element
        store %136, %138, align 16
        %139 = const -0.000000e+00 : double
        %140 = const 5 : s64i
        %141 = get_global @Y : double[8]*
        get_element
        %143 = load %142 : double, align 8
        copysign
        %145 = const 5 : s64i
        get_element
        store %144, %146, align 8
        %147 = const 0x7FF0000000000000 : double
        %148 = const 6 : s64i
        %149 = get_global @Y : double[8]*
        get_element
        %151 = load %150 : double, align 16
        copysign
        %153 = const 6 : s64i
        get_element
        store %152, %154, align 16
        %155 = const 0xFFF8000000000000 : double
        %156 = const 7 : s64i
        %157 = get_global @Y : double[8]*
        get_element
        %159 = load %158 : double, align 8
        copysign
        %161 = const 7 : s64i
        get_element
        store %160, %162, align 8
        scope {
                %163 = const 0 : s32i
                store %163, %98, align 4
                for cond {
                        %181 = load %98 : s32i, align 4
                        %182 = const 8 : s32i
                        cmp
                        condition %183
                } step {
                        %164 = load %98 : s32i, align 4
                        inc
                        store %165, %98, align 4
                        yield
                } body {
                        scope {
                                %166 = get_global @memcmp : (void*, void*, u64i) -> s32i*
                                %167 = cast(array_to_ptrdecay) %97 : double*
                                %168 = load %98 : s32i, align 4
                                ptr_stride
                                %170 = cast(bitcast) %169 : void*
                                %171 = get_global @Z : double[8]*
                                %172 = cast(array_to_ptrdecay) %171 : double*
                                %173 = load %98 : s32i, align 4
                                ptr_stride
                                %175 = cast(bitcast) %174 : void*
                                %176 = const 8 : u64i
                                %177 = call @memcmp(%170, %175, %176) : s32i [pure]
                                %178 = const 0 : s32i
                                cmp
                                if %179 {
                                        %180 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        return
}
fn testl() -> void [external, c, no_inline, dso_local, nothrow] {
        %4 = alloca long_double<f80>[8], "r", align 16
        %5 = alloca s32i, "i", align 4
        %6 = const 1.000000e+00 : double
        %7 = cast(floating) %6 : long_double<f80>
        %8 = const 0 : s64i
        %9 = get_global @Yl : long_double<f80>[8]*
        get_element
        %11 = load %10 : long_double<f80>, align 16
        copysign
        %13 = const 0 : s64i
        get_element
        store %12, %14, align 16
        %15 = const 1.000000e+00 : double
        %16 = cast(floating) %15 : long_double<f80>
        %17 = const 1 : s64i
        %18 = get_global @Yl : long_double<f80>[8]*
        get_element
        %20 = load %19 : long_double<f80>, align 16
        copysign
        %22 = const 1 : s64i
        get_element
        store %21, %23, align 16
        %24 = const -1.000000e+00 : double
        %25 = cast(floating) %24 : long_double<f80>
        %26 = const 2 : s64i
        %27 = get_global @Yl : long_double<f80>[8]*
        get_element
        %29 = load %28 : long_double<f80>, align 16
        copysign
        %31 = const 2 : s64i
        get_element
        store %30, %32, align 16
        %33 = const 0.000000e+00 : double
        %34 = cast(floating) %33 : long_double<f80>
        %35 = const 3 : s64i
        %36 = get_global @Yl : long_double<f80>[8]*
        get_element
        %38 = load %37 : long_double<f80>, align 16
        copysign
        %40 = const 3 : s64i
        get_element
        store %39, %41, align 16
        %42 = const -0.000000e+00 : double
        %43 = cast(floating) %42 : long_double<f80>
        %44 = const 4 : s64i
        %45 = get_global @Yl : long_double<f80>[8]*
        get_element
        %47 = load %46 : long_double<f80>, align 16
        copysign
        %49 = const 4 : s64i
        get_element
        store %48, %50, align 16
        %51 = const -0.000000e+00 : double
        %52 = cast(floating) %51 : long_double<f80>
        %53 = const 5 : s64i
        %54 = get_global @Yl : long_double<f80>[8]*
        get_element
        %56 = load %55 : long_double<f80>, align 16
        copysign
        %58 = const 5 : s64i
        get_element
        store %57, %59, align 16
        %60 = const 0x7FFF8000000000000000 : long_double<f80>
        %61 = const 6 : s64i
        %62 = get_global @Yl : long_double<f80>[8]*
        get_element
        %64 = load %63 : long_double<f80>, align 16
        copysign
        %66 = const 6 : s64i
        get_element
        store %65, %67, align 16
        %68 = const 0xFFFFC000000000000000 : long_double<f80>
        %69 = const 7 : s64i
        %70 = get_global @Yl : long_double<f80>[8]*
        get_element
        %72 = load %71 : long_double<f80>, align 16
        copysign
        %74 = const 7 : s64i
        get_element
        store %73, %75, align 16
        scope {
                %76 = const 0 : s32i
                store %76, %5, align 4
                for cond {
                        %94 = load %5 : s32i, align 4
                        %95 = const 8 : s32i
                        cmp
                        condition %96
                } step {
                        %77 = load %5 : s32i, align 4
                        inc
                        store %78, %5, align 4
                        yield
                } body {
                        scope {
                                %79 = get_global @memcmp : (void*, void*, u64i) -> s32i*
                                %80 = cast(array_to_ptrdecay) %4 : long_double<f80>*
                                %81 = load %5 : s32i, align 4
                                ptr_stride
                                %83 = cast(bitcast) %82 : void*
                                %84 = get_global @Zl : long_double<f80>[8]*
                                %85 = cast(array_to_ptrdecay) %84 : long_double<f80>*
                                %86 = load %5 : s32i, align 4
                                ptr_stride
                                %88 = cast(bitcast) %87 : void*
                                %89 = const 10 : u64i
                                %90 = call @memcmp(%83, %88, %89) : s32i [pure]
                                %91 = const 0 : s32i
                                cmp
                                if %92 {
                                        %93 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        call @testf() [all]
        call @test() [all]
        call @testl() [all]
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
